--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@sendgrid/mail": "^8.1.3",
     "@supabase/supabase-js": "^2.44.4",
     "emailjs-com": "^3.2.0",
+    "jquery": "^3.7.1",
+    "jquery-contextmenu": "^2.9.2",
     "next": "14.2.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
