--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@sendgrid/mail": "^8.1.3",
     "@supabase/supabase-js": "^2.45.1",
     "emailjs-com": "^3.2.0",
@@ -18,6 +22,7 @@
     "next": "14.2.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7"
