--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7"
   },
