--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "recharts": "^2.12.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
