--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@hello-pangea/dnd": "^17.0.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
     "@sendgrid/mail": "^8.1.3",
@@ -19,13 +20,13 @@
     "emailjs-com": "^3.2.0",
     "jquery": "^3.7.1",
     "jquery-contextmenu": "^2.9.2",
-    "next": "14.2.4",
+    "next": "^14.2.18",
     "qrcode.react": "^3.1.0",
     "react": "^18",
-    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
