--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^14.2.18",
     "qrcode.react": "^3.1.0",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
