--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "react-resizable": "^3.0.5",
     "recharts": "^2.12.7"
   },
   "devDependencies": {
@@ -36,6 +37,7 @@
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/react-resizable": "^3.0.8",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
