--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-resizable": "^3.0.5",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "supabase": "^2.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.17.7",
